@@ -1,0 +1,3 @@
+# this will fail w/ assertionerror
+cd /
+assert os.getcwd() == '/does/not/exist'
